<resources>
    <string name="app_name">Wordle</string>
    <string name="guess">Guess!</string>
    <string name="enter_4_letter_guess">Enter 4 letter guess</string>
    <string name="guess_1">Guess#1</string>
    <string name="guess_1_check">Guess#1Check</string>
    <string name="guess_2">Guess#2</string>
    <string name="guess_2_check">Guess#2Check</string>
    <string name="guess_3">Guess#3</string>
    <string name="guess_3_check">Guess#3Check</string>
    <string name="guess3check" />
    <string name="Guess2">Guess#2</string>
    <string name="guess_1check">Guess#1Check</string>
    <string name="guess1">Guess#1</string>
    <string name="target" />
    <string name="choice2" />
    <string name="choice1" />
    <string name="option3" />
    <string name="option5" />
    <string name="guess3">Text5</string>
    <string name="guess3_check" />
    <string name="geeusse3" />
</resources>