<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enter_4_letter_guess"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Guess1"
        android:layout_width="62dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/guess1"
        app:layout_constraintBottom_toTopOf="@+id/guess1check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <TextView
        android:id="@+id/guess1check"
        android:layout_width="98dp"
        android:layout_height="19dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/guess_1check"
        app:layout_constraintBottom_toTopOf="@+id/guess2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guess2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Guess2"
        app:layout_constraintBottom_toTopOf="@+id/guess2check"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guess2check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:text="Guess#2Check"
        app:layout_constraintBottom_toTopOf="@+id/guess3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guess3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="32dp"
        android:text="Guess#3"
        app:layout_constraintBottom_toTopOf="@+id/guess3check"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/guess3check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="144dp"
        android:text="Guess#3Check"
        app:layout_constraintBottom_toTopOf="@+id/textInput"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/guess3Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="144dp"
        android:text="Text6"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toEndOf="@+id/guess3check" />

    <TextView
        android:id="@+id/guess_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:text="Text5"
        app:layout_constraintBottom_toTopOf="@+id/guess3Check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/guess3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/guess2Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="20dp"
        android:text="TextView4"
        app:layout_constraintBottom_toTopOf="@+id/guess_3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/guess_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:text="TextView3"
        app:layout_constraintBottom_toTopOf="@+id/guess2Check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toEndOf="@+id/guess2" />

    <TextView
        android:id="@+id/guess_1Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:text="TextView2"
        app:layout_constraintBottom_toTopOf="@+id/guess_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toEndOf="@+id/guess1check" />

    <TextView
        android:id="@+id/guess_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="TextView1"
        app:layout_constraintBottom_toTopOf="@+id/guess_1Check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/Guess1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/target"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:layout_marginBottom="44dp"
        android:text="@string/target"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/textInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>